# 25-robot-Fanfanfan

./: README.md
AccountManagement/: CMakeLists.txt  README.md
AccountManagement/include/core/: Constants.hpp  Transaction.hpp
AccountManagement/include/data/: AccountBook.hpp  FileManager.hpp
AccountManagement/include/stats/: DailyCalculator.hpp  MonthlyCalculator.hpp  StatisticsCalculator.hpp  YearlyCalculator.hpp
AccountManagement/include/ui/: Menu.hpp
AccountManagement/src/: main.cpp
AccountManagement/src/core/: Transaction.cpp
AccountManagement/src/data/: AccountBook.cpp  FileManager.cpp
AccountManagement/src/stats/: DailyCalculator.cpp  MonthlyCalculator.cpp  StatisticsCalculator.cpp  YearlyCalculator.cpp
AccountManagement/src/ui/: Menu.cpp
AccountManagement/test/: CMakeLists.txt  test_main.cpp
